--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,3 +12,5 @@ agp-layoutlib = { module = "com.android.tools.layoutlib:layoutlib-api", version.
 agp-tools-common = { module = "com.android.tools:common", version.ref = "agp-tools" }
 agp-tools-manifestmerger = { module = "com.android.tools.build:manifest-merger", version.ref = "agp-tools" }
 agp-tools-sdk = { module = "com.android.tools:sdk-common", version.ref = "agp-tools" }
+
+jarjar = { module = "org.anarres.jarjar:jarjar-core", version = "1.0.1" }
