--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,3 +14,5 @@ agp-tools-manifestmerger = { module = "com.android.tools.build:manifest-merger",
 agp-tools-sdk = { module = "com.android.tools:sdk-common", version.ref = "agp-tools" }
 
 jarjar = { module = "org.anarres.jarjar:jarjar-core", version = "1.0.1" }
+
+kotlinxml = { module = "org.redundent:kotlin-xml-builder", version = "1.8.0" }
