Add library dependency on sample app.

--- a/sample-lib/settings.gradle
+++ b/sample-lib/settings.gradle
@@ -16,5 +16,6 @@ dependencyResolutionManagement {
 rootProject.name = "samplelib"
 
 include ':library'
+include ':helper-library'
 
 includeBuild '..'
