--- a/sample-lib/settings.gradle
+++ b/sample-lib/settings.gradle
@@ -1,15 +1,22 @@
 pluginManagement {
   repositories {
+    gradlePluginPortal()
     google()
     mavenCentral()
-    gradlePluginPortal()
+    maven {
+      url("https://s01.oss.sonatype.org/content/repositories/snapshots")
+    }
   }
 }
+
 dependencyResolutionManagement {
   repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
   repositories {
     google()
     mavenCentral()
+    maven {
+      url("https://s01.oss.sonatype.org/content/repositories/snapshots")
+    }
   }
 }
 
@@ -17,5 +24,3 @@ rootProject.name = "samplelib"
 
 include ':library'
 include ':helper-library'
-
-includeBuild '..'
