Add detekt to CI pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs :
           check-latest : true
 
       - name : Assemble & Test
-        run : ./gradlew clean assemble test --no-build-cache --no-daemon --stacktrace
+        run : ./gradlew clean assemble test detekt --no-build-cache --no-daemon --stacktrace
 
       - name : Upload Test Results
         uses : actions/upload-artifact@v2
