--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,3 +26,5 @@ maven-publish = { module = "com.vanniktech:gradle-maven-publish-plugin", version
 
 detekt-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 detekt-rules-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
+
+kotest = { module = "io.kotest:kotest-assertions-core", version = "5.5.4" }
