--- a/sample-lib/helper-library/build.gradle
+++ b/sample-lib/helper-library/build.gradle
@@ -1,7 +1,11 @@
 plugins {
   id 'com.android.library'
   id 'org.jetbrains.kotlin.android'
+  id 'maven-publish'
 }
+
+group = "sh.christian.samplelib"
+version = "1.0.0"
 
 android {
   namespace 'sh.christian.samplelib.helper'
@@ -35,4 +39,14 @@ dependencies {
   api fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'androidx.core:core-ktx:1.9.0'
   implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.0'
+}
+
+afterEvaluate {
+  publishing {
+    publications {
+      maven(MavenPublication) {
+        from components.release
+      }
+    }
+  }
 }
