--- a/sample-lib/helper-library/build.gradle
+++ b/sample-lib/helper-library/build.gradle
@@ -21,6 +21,10 @@ android {
     }
   }
 
+  buildFeatures {
+    buildConfig true
+  }
+
   packagingOptions {
     exclude "**/module-info.class"
   }
@@ -33,6 +37,12 @@ android {
   kotlinOptions {
     jvmTarget = '11'
   }
+
+  publishing {
+    singleVariant("release") {
+      withSourcesJar()
+    }
+  }
 }
 
 dependencies {
@@ -41,21 +51,11 @@ dependencies {
   implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.0'
 }
 
-tasks.register('androidSourcesJar', Jar) {
-  archiveClassifier.set('sources')
-  from android.sourceSets.main.java.srcDirs
-}
-
 afterEvaluate {
-  artifacts {
-    archives androidSourcesJar
-  }
-
   publishing {
     publications {
       maven(MavenPublication) {
         from components.release
-        artifact androidSourcesJar
       }
     }
   }
