Upgrade to Kotlin 1.8.20, introduce Dokka.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,8 @@
 agp-latest = "8.0.1"
 agp-tools = "30.4.2"
 detekt = "1.22.0"
-kotlin = "1.8.0"
+dokka = "1.8.20"
+kotlin = "1.8.20"
 maven-publish = "0.23.2"
 
 [plugins]
@@ -26,6 +27,7 @@ jimfs = { module = "com.google.jimfs:jimfs", version = "1.2" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
 kotlinxml = { module = "org.redundent:kotlin-xml-builder", version = "1.8.0" }
 
+dokka-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "dokka" }
 maven-publish = { module = "com.vanniktech:gradle-maven-publish-plugin", version.ref = "maven-publish" }
 
 detekt-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
