--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=512m
 kotlin.code.style=official
 
 POM_GROUP_ID=sh.christian.aaraar
-POM_VERSION=0.0.10
+POM_VERSION=0.0.11-SNAPSHOT
