Add utility methods for JAR manipulation.
This will facilitate loading a jar file as a classpath and allowing
developers to manipulate the structure of the class files, including
things like method signatures, class hierarchies, and so on.

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -3,6 +3,15 @@ complexity:
     constructorThreshold: 999
   LongMethod:
     threshold: 100
+  CyclomaticComplexMethod:
+    threshold: 20
+  TooManyFunctions:
+    thresholdInClasses: 20
+
+naming:
+  ConstructorParameterNaming:
+    parameterPattern: "[a-z_][A-Za-z0-9]*"
+    privateParameterPattern: "[a-z_][A-Za-z0-9]*"
 
 formatting:
   Filename:
