--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ asm = { module = "org.ow2.asm:asm-commons", version = "9.4" }
 jarjar = { module = "org.anarres.jarjar:jarjar-core", version = "1.0.1" }
 javassist = { module = "org.javassist:javassist", version = "3.30.2-GA" }
 decompiler = { module = "com.jetbrains.intellij.java:java-decompiler-engine", version = "233.14475.28" }
+kotlin-metadata = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version = "0.9.0" }
 
 jimfs = { module = "com.google.jimfs:jimfs", version = "1.2" }
 
