--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ javassist = { module = "org.javassist:javassist", version = "3.30.2-GA" }
 decompiler = { module = "com.jetbrains.intellij.java:java-decompiler-engine", version = "233.14475.28" }
 kotlin-metadata = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version = "0.9.0" }
 
+okio = { module = "com.squareup.okio:okio", version = "3.9.1" }
 jimfs = { module = "com.google.jimfs:jimfs", version = "1.2" }
 
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
