Support parsing a few different section data kinds.

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -5,7 +5,7 @@ complexity:
   LongMethod:
     threshold: 100
   CyclomaticComplexMethod:
-    threshold: 25
+    active: false
   TooManyFunctions:
     thresholdInClasses: 20
 
