--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 .gradle
 /build/
 !gradle/wrapper/gradle-wrapper.jar
+local.properties
 
 # IntelliJ IDEA
+.idea/copilot.*
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
