--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
+        agp: [ '7.0.0', '7.4.2', '8.0.0', '8.13.2', '9.0.0' ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
@@ -25,7 +26,7 @@ jobs:
           check-latest: true
 
       - name: Assemble & Test
-        run: ./gradlew clean assemble test detekt --no-build-cache --no-daemon --stacktrace
+        run: ./gradlew clean assemble test detekt -PagpVersion=${{ matrix.agp }} --no-build-cache --no-daemon --stacktrace
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
