--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           check-latest: true
 
       - name: Assemble & Test
-        run: ./gradlew clean assemble test detekt -PagpVersion=${{ matrix.agp }} --no-build-cache --no-daemon --stacktrace
+        run: ./gradlew clean assemble test detekt -PagpVersion="${{ matrix.agp }}" --no-build-cache --no-daemon --stacktrace
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
